# snippetdrift

./: .gitignore  CLAUDE.md  README.md  lefthook.yml  pyproject.toml
.github/workflows/: snippetdrift.yml
examples/: README.md
examples/docs/: api_guide.md
examples/src/api/: models.py  models_drifted.py
src/snippetdrift/: __init__.py  cache.py  checker.py  cli.py  display.py  hasher.py  models.py  parser.py  writer.py
tests/: conftest.py  test_checker.py  test_examples.py  test_hasher.py  test_parser.py  test_writer.py
