[project]
name = "snippetdrift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[project.scripts]
snippetdrift = "snippetdrift:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
