[project]
name = "snippetdrift"
version = "0.1.0"
description = "Detect when source code referenced from markdown has drifted from a stored hash"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/raoulg/snippetdrift"
Repository = "https://github.com/raoulg/snippetdrift"
Issues = "https://github.com/raoulg/snippetdrift/issues"

[project.scripts]
snippetdrift = "snippetdrift.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
